fix: misc align css

--- a/src/App.css
+++ b/src/App.css
@@ -771,7 +771,7 @@ table th {
 }
 
 .sideHistory {
-  height: 1638px;
+  height: 1702px;
 }
 
 .sideIntro {
